<resources>
    <string name="app_name">FirebaseSocialMediaApp</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>
</resources>
